* 2013-09-16 - choeger@open-xchange.com

 - Fix for bug 28830: oxsysreport is collecting unneeded protected data

* 2013-08-08 - choeger@open-xchange.com

 - Fix for bug 28157: generatempasswd returns "0" even if it fails

* 2013-06-12 - thorben.betten@open-xchange.com

 - Fix for bug 26164: Accept other boolean identifiers like "true","1","yes","y", and "on"

* 2012-12-12 - thorben.betten@open-xchange.com

 - Fix for bug 24158: Made master password optional

* 2012-07-18 - choeger@open-xchange.com

 - Fix for bug 22581: oxinstaller memory parsing should be more fault-tolerant

* 2012-07-03 - thorben.betten@open-xchange.com

 - Fix for bug 21743: Retry on detected MySQL deadlock

* 2012-06-06 - marcus.klein@open-xchange.com

 - Fix for bug 22263: RequireBundle is still necessary for com.openexchange.admin & com.openexchange.admin.plugin.hosting bundles.

* 2012-05-24 - marcus.klein@open-xchange.com

 - Fix for bug 22189: Removed stale reference to RMI.properties configuration file.

* 2012-05-24 - jan.bauerdick@open-xchange.com

 - Register RMI in the OSGI system

* 2012-05-23 - marcus.klein@open-xchange.com

 - Fix for bug 22163: Using cache write through for context to database assignment to prevent missing information while reading from slave.

* 2012-05-04 - marcus.klein@open-xchange.com

 - Fix for bug 21826: Logging every create, change and delete operation of contexts, users, groups and resources.

* 2012-04-04 - thorben.betten@open-xchange.com

 - Fix for bug 21903/21904: Ensure IDN presentation of obtained E-Mail address

* 2012-03-11 - thorben.betten@open-xchange.com

 - Fix for bug 21633: Honor mail account tables when changing names of mail standard folders (drafts, sent, trash, ...)

* 2012-02-24 - thorben.betten@open-xchange.com

 - Fix for bug 21643: Fixed possible NoSuchElementException in Unified Mail

* 2012-02-23 - thorben.betten@open-xchange.com

 - Fix for bug 21626: Resolving dependencies for IDN support
